responsive menu & template params 10%

--- a/css/template.css
+++ b/css/template.css
@@ -14,7 +14,7 @@
 
 
 /* HEADER */
-#logo {
+/*#logo {
 	margin: 0;
 	padding: 0;
 	
@@ -31,7 +31,7 @@
 	-webkit-transition: all .2s linear;
 	-moz-transition: all .2s linear;
 	transition: all .2s linear;
-}
+}*/
 
 #nav-placeholder {
 	padding-top: 39px;
